Account management refactoring and alignment issues fixed

--- a/app/styles/basic/_typography.scss
+++ b/app/styles/basic/_typography.scss
@@ -165,6 +165,17 @@ a, a:link, a:visited {
   padding-top: 3px;
 }
 
+.description {
+  font-size: 10px;
+}
+
+.alt-addr{
+  padding-top: 15px;
+  li{
+    padding-bottom: 15px;
+  }
+}
+
 .caps {
   text-transform: uppercase;
 }
